fix: сделал, чтобы wrappper в Main не растягивался больше 1440px и располагался по центру

--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -68,6 +68,8 @@
 
 .wrapper {
   position: relative;
+  max-width: 1440px;
+  margin: 0 auto;
 
   &::after {
     content: '';
